@@ -5,6 +5,8 @@ Date: ????
     - Added setting to disable the green "alternate name" in object tooltips
     - Added `usable in` list to the material page, listing the labs that that science pack is usable in
     - Added ingredients and products to recipe tooltips
+  Changes:
+    - Characters are now properly detected and included as crafters, instead of being hard-coded
 ---------------------------------------------------------------------------------------------------
 Version: 2.2.0
 Date: 2020-08-30
